--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,2 @@
-<div class="input-holder">
-  <input #searchEl type="text" placeholder="Search Term">
-  <button class="search-button" (click)="searchTerm(searchEl)">
-    Search
-  </button>
-</div>
-<div class="" *ngFor="let doc of orderedDocs">
-  {{doc}}
-</div>
+<router-outlet>
+</router-outlet>
