--- a/src/app/admin/admin.component.scss
+++ b/src/app/admin/admin.component.scss
@@ -59,6 +59,7 @@
 }
 
 .single-result {
+  position: relative;
   width: 100%;
   margin-top: 10px;
   border-radius: 4px;
@@ -73,4 +74,13 @@
   .doc-title {
     font-size: 28px;
   }
+}
+
+.doc-delete {
+  position: absolute;
+  right: 25px;
+  top: 35px;
+  padding: 7px;
+  border: 1px solid gray;
+  border-radius: 4px;
 }
