--- a/src/app/admin/admin.component.scss
+++ b/src/app/admin/admin.component.scss
@@ -60,6 +60,9 @@
 
 .single-result {
   position: relative;
+  display: block;
+  text-decoration: none;
+  color: black;
   width: 100%;
   margin-top: 10px;
   border-radius: 4px;
