--- a/src/app/document/document.component.html
+++ b/src/app/document/document.component.html
@@ -1,10 +1,8 @@
 <div class="document-holder">
   <div class="pdf-holder" *ngIf="document">
-    <embed
+    <iframe
       class="pdf-embed"
-      src="https://storage.cloud.google.com/testing-storage-video-5555/0.4880227896718934-document-pdf.pdf"
-      title="description"
-    />
+    ></iframe>
   </div>
   <div class="text-holder" *ngIf="document">
     <div class="text-title">
