--- a/src/app/document/document.component.html
+++ b/src/app/document/document.component.html
@@ -8,6 +8,9 @@
     <div class="text-title">
       Raw OCR Text
     </div>
+    <div class="text-date">
+      Document from date: {{document.date}}
+    </div>
     <div class="text-text">
       {{document.ocrText}}
     </div>
