--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -54,6 +54,14 @@
         <div class="doc-title">
           {{doc.title}}
         </div>
+        <div class="categories-holder">
+          <div class="categories-title">
+            Categories:
+          </div>
+          <div class="single-category" *ngFor="let cat of doc.categories">
+            {{cat}}
+          </div>
+        </div>
       </div>
     </div>
   </div>
