--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -150,7 +150,7 @@
   width: 100%;
   margin-top: 15px;
   border-radius: 4px;
-  padding: 35px 15px;
+  padding: 35px 15px 20px 15px;
   background-color: white;
   box-sizing: border-box;
   cursor: default;
@@ -176,5 +176,26 @@
     width: calc(100% - 32px);
     font-size: 16px;
     box-sizing: border-box;
+  }
+}
+
+.categories-holder {
+  position: relative;
+  font-size: 14px;
+  margin-top: 20px;
+}
+
+.categories-title {
+  display: inline-block;
+  vertical-align: top;
+}
+
+.single-category {
+  display: inline-block;
+  vertical-align: top;
+  margin-left: 10px;
+  font-size: 14px;
+  &-first-of-type {
+    margin-left: 0;
   }
 }
