--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -5,7 +5,7 @@
   padding-bottom: 150px;
   max-width: 1000px;
   margin: 0 auto;
-  padding: 0 15px;
+  padding: 0 15px 150px 15px;
   background-color: #f9f9f9;
   box-sizing: border-box;
   font-family: sans-serif;
