--- a/src/app/admin/admin.component.scss
+++ b/src/app/admin/admin.component.scss
@@ -3,7 +3,7 @@
   position: relative;
   max-width: 1000px;
   margin: 0 auto;
-  padding: 0 25px;
+  padding: 0 25px 150px 25px;
   box-sizing: border-box;
   font-family: sans-serif;
 }
