--- a/src/app/admin/admin.component.scss
+++ b/src/app/admin/admin.component.scss
@@ -13,10 +13,23 @@
     position: relative;
     padding: 25px;
     box-sizing: border-box;
-    input, textarea {
+    input {
       display: block;
       margin-top: 15px;
-      width: 400px;
+      width: 100%;
+      max-width: 500px;
+      padding: 20px 15px;
+      padding-left: 15px;
+      border-radius: 5px;
+      box-sizing: border-box;
+      background-color: #eefbfb;
+    }
+    textarea {
+      display: block;
+      margin-top: 15px;
+      width: 100%;
+      height: 250px;
+      max-width: 800px;
       padding: 20px 15px;
       padding-left: 15px;
       border-radius: 5px;
