updated UI aspects and fixed delete button

--- a/src/app/document/document.component.html
+++ b/src/app/document/document.component.html
@@ -6,7 +6,7 @@
   </div>
   <div class="text-holder" *ngIf="document">
     <div class="text-title">
-      Raw OCR Text
+      Raw OCR Text:
     </div>
     <div class="text-date">
       Document from date: {{document.date}}
