updated document ui

--- a/src/app/document/document.component.html
+++ b/src/app/document/document.component.html
@@ -6,10 +6,13 @@
   </div>
   <div class="text-holder" *ngIf="document">
     <div class="text-title">
-      Raw OCR Text:
+      {{document.title}}
     </div>
     <div class="text-date">
-      Document from date: {{document.date}}
+      Date: {{document.date}}
+    </div>
+    <div class="text-label">
+      Raw OCR Text:
     </div>
     <div class="text-text">
       {{document.ocrText}}
