updated categories to remove leading spaces

--- a/src/app/document/document.component.html
+++ b/src/app/document/document.component.html
@@ -11,6 +11,9 @@
     <div class="text-date">
       Date: {{document.date}}
     </div>
+    <div class="text-date" *ngIf="document && document.categories">
+      Categories: {{document.categories.join(', ')}}
+    </div>
     <div class="text-label">
       Raw OCR Text:
     </div>
