--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -217,7 +217,8 @@
     position: absolute;
     width: 350px;
     height: 60px;
-    font-size: 16px;
+    font-size: 18px;
+    padding: 0 15px;
     border-radius: 4px;
     margin: 100px auto 0 auto;
     left: 0;
