--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -225,4 +225,22 @@
     right: 0;
     background-color: white;
   }
+
+  .password-button {
+    position: absolute;
+    width: 100px;
+    height: 40px;
+    margin: 260px auto 0 auto;
+    left: -280px;
+    right: 0;
+    border-radius: 4px;
+    line-height: 40px;
+    text-align: center;
+    background-color: white;
+    cursor: default;
+    transition: opacity .2s ease-in-out;
+    &:hover {
+      opacity: 0.7;
+    }
+  }
 }
