--- a/src/app/document/document.component.scss
+++ b/src/app/document/document.component.scss
@@ -2,18 +2,38 @@
 .document-holder {
   position: relative;
   width: 100vw;
+  padding: 25px;
+  background-color: #ececec;
+  box-sizing: border-box;
+  @media screen and (max-width:769px) {
+    padding: 10px;
+  }
+  &-inner {
+    width: 100%;
+    max-width: 900px;
+    margin: 0 auto;
+  }
 }
 
 .pdf-holder {
   position: relative;
-  display: inline-block;
-  vertical-align: top;
   width: 100%;
   height: 100vh;
-  margin-top: 25px;
+  padding: 25px;
+  margin: 40px auto 0 auto;
+  box-sizing: border-box;
+  background-color: white;
   @media screen and (max-width:769px) {
     width: 100%;
     height: 75vh;
+    padding: 5px;
+    margin: 20\5px auto 0 auto;
+  }
+  &-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
   }
   .pdf-embed {
     position: absolute;
@@ -33,6 +53,7 @@
   @media screen and (max-width: 769px) {
     width: 100%;
     padding: 50px 25px;
+    padding: 15px;
   }
 }
 
