--- a/src/app/document/document.component.html
+++ b/src/app/document/document.component.html
@@ -12,9 +12,10 @@
       </div>
       <div class="pdf-holder" *ngIf="document">
         <div class="pdf-holder-inner">
-          <iframe
+          <canvas id="the-canvas"></canvas>
+          <!-- <iframe
             class="pdf-embed"
-          ></iframe>
+          ></iframe> -->
         </div>
       </div>
     </div>
