--- a/src/app/document/document.component.scss
+++ b/src/app/document/document.component.scss
@@ -19,7 +19,7 @@
   position: relative;
   width: 100%;
   height: 100vh;
-  padding: 25px;
+  padding:  40px 25px 25px 25px;
   margin: 40px auto 0 auto;
   box-sizing: border-box;
   background-color: white;
@@ -81,4 +81,12 @@
 #pdf-canvas {
   border: 3px solid black;
   transform: rotatex(180deg)
+}
+
+.download-button {
+  position: absolute;
+  color: black;
+  top: 10px;
+  left: 15px;
+  font-size: 18px;
 }
