--- a/src/app/document/document.component.scss
+++ b/src/app/document/document.component.scss
@@ -2,11 +2,11 @@
 .document-holder {
   position: relative;
   width: 100vw;
-  padding: 25px;
+  padding: 25px 25px 55px 25px;
   background-color: #ececec;
   box-sizing: border-box;
   @media screen and (max-width:769px) {
-    padding: 10px;
+    padding: 10px 10px 25px 10px;
   }
   &-inner {
     width: 100%;
@@ -19,6 +19,7 @@
   position: relative;
   width: 100%;
   height: 100vh;
+  min-height: 400px;
   padding:  40px 25px 25px 25px;
   margin: 40px auto 0 auto;
   box-sizing: border-box;
@@ -26,8 +27,8 @@
   @media screen and (max-width:769px) {
     width: 100%;
     height: 75vh;
-    padding: 5px;
-    margin: 20\5px auto 0 auto;
+    padding:  40px 5px 25px 5px;
+    margin: 25px auto 0 auto;
   }
   &-inner {
     position: relative;
@@ -89,4 +90,7 @@
   top: 10px;
   left: 15px;
   font-size: 18px;
+  @media screen and (max-width: 500px) {
+    font-size: 14px;
+  }
 }
