--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,8 +3,8 @@
   <div class="password-button" (click)="tryPassword({target: pwInput})">
     Submit
   </div>
-</div> -->
-<!-- <div class="page-holder" *ngIf="!documentLocked">
+</div>
+<div class="page-holder" *ngIf="!documentLocked">
 <div class="page-holder" *ngIf="true">
   <div class="map-holder">
     <div class="map-image-holder">
