--- a/src/app/press/press.component.html
+++ b/src/app/press/press.component.html
@@ -604,3 +604,21 @@
 
   </div>
 </div>
+
+<div class="header">
+  <a [routerLink]="['/press']">
+    <div class="link">
+      Press Page
+    </div>
+  </a>
+  <a [routerLink]="['/people']">
+    <div class="link">
+      Our People
+    </div>
+  </a>
+  <a [routerLink]="['/']">
+    <div class="link">
+      Home
+    </div>
+  </a>
+</div>
