--- a/src/app/document/document.component.scss
+++ b/src/app/document/document.component.scss
@@ -2,7 +2,7 @@
 .document-holder {
   position: relative;
   width: 100vw;
-  padding: 25px 25px 55px 25px;
+  padding: 95px 25px 55px 25px;
   background-color: #ececec;
   box-sizing: border-box;
   @media screen and (max-width:769px) {
@@ -92,5 +92,39 @@
   font-size: 18px;
   @media screen and (max-width: 500px) {
     font-size: 14px;
+  }
+}
+
+.header {
+  position: fixed;
+  width: 100vw;
+  height: 90px;
+  top: 0;
+  left: 0;
+  background-color: #f9f9f9;
+  @media screen and (max-width: 500px) {
+    height: 70px;
+  }
+  .link {
+    display: inline-block;
+    float: right;
+    height: 50px;
+    line-height: 40px;
+    margin-top: 20px;
+    padding: 5px 40px;
+    font-size: 20px;
+    vertical-align: top;
+    box-sizing: border-box;
+    color: black;
+    @media screen and (max-width: 500px) {
+      width: 33.3%;
+      padding: 0;
+      float: unset;
+      margin: 15px 0 0 0 !important;
+      text-align: center;
+    }
+    &:first-of-type {
+      margin-right: 50px;
+    }
   }
 }
