--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,10 @@
-<!-- <div class="password-modal" *ngIf="documentLocked">
+<div class="password-modal" *ngIf="documentLocked">
   <input #pwInput type="password" placeholder="Enter password" (keyup.enter)="tryPassword($event)">
   <div class="password-button" (click)="tryPassword({target: pwInput})">
     Submit
   </div>
-</div> -->
-<!-- <div class="page-holder" *ngIf="!documentLocked"> -->
-<div class="page-holder" *ngIf="true">
+</div>
+<div class="page-holder" *ngIf="!documentLocked">
   <div class="map-holder">
     <div class="map-image-holder">
       <img src="https://usarmyiraqwar.com/wp-content/uploads/2021/02/Picture1.png" alt="">
